[package]
name = "piece-tree-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
storage-proofs-core = { git = "https://github.com/filecoin-project/rust-fil-proofs.git", tag = "v16.0.0" }
neptune = "8"
blstrs = "0.7"
